fix: fix the broken layout when next and previous button was activated, and remove the bottom slide buttons

--- a/src/app/components/partials/testmonials/responsive.component.scss
+++ b/src/app/components/partials/testmonials/responsive.component.scss
@@ -1,3 +1,18 @@
+@media (max-width: 765px) {
+  #testmonials-section {
+    height: 90vh;
+  }
+
+  .item {
+    h2 {
+      font-size: 15px;
+    }
+    p {
+      font-size: 13px;
+    }
+  }
+}
+
 @media (max-width: 375px) {
   // #testmonials-section {
   //   height: 100vh;
@@ -25,6 +40,12 @@
     }
     p {
       font-size: 13px;
+    }
+  }
+
+  .item {
+    img {
+      width: 100px;
     }
   }
 }
