--- a/src/app/components/partials/testmonials/testmonials.component.scss
+++ b/src/app/components/partials/testmonials/testmonials.component.scss
@@ -1,9 +1,9 @@
 @import "../../../scss/colors.scss";
-* {
-  margin: 0;
-}
+// * {
+//   margin: 0;
+// }
+
 #testmonials-section {
-  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,7 +18,7 @@
 
 .carousel-inner {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   flex-wrap: wrap;
   background-color: $bg-second;
 }
@@ -28,7 +28,7 @@
   margin: 5% auto;
 
   img {
-    width: 50px;
+    width: 150px;
     margin: 20px 0 20px 0;
   }
 }
